test/invalid-semantic/58182_add_int_to _string/add_int_to_string.agu
-- Author: 58182, Gabriel Henriques

let addIntToString : String = "Hello" + 123